# rstore_example

./: LICENSE  README.md  docker-compose.yaml
api/: Dockerfile  README.md  pyproject.toml
api/rstore_example_api/: __main__.py  action.py  app.py  config.py  middleware.py  model.py  reducer.py  task.py
webapp/: package-lock.json  package.json
webapp/src/: App.jsx  LauncherPage.jsx  api-client.js  main.jsx  request.js  state.js
